<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ListPreference
        android:key="burst_count"
        android:title="@string/pref_burst_title"
        android:summary="@string/pref_burst_summary"
        android:entries="@array/burst_count_entries"
        android:entryValues="@array/burst_count_values"
        android:defaultValue="25"
        app:useSimpleSummaryProvider="false" />

    <ListPreference
        android:key="ev_comp"
        android:title="@string/pref_ev_title"
        android:summary="@string/pref_ev_summary"
        android:entries="@array/ev_entries"
        android:entryValues="@array/ev_values"
        android:defaultValue="-1.0"
        app:useSimpleSummaryProvider="false" />

    <SwitchPreferenceCompat
        android:key="use_sr"
        android:title="@string/pref_sr_title"
        android:summary="@string/pref_sr_summary"
        android:defaultValue="true" />

</PreferenceScreen>
